Package_Tools/include-C/llvm-c-20/llvm-c/in_arbeit/pp/DebugInfo.pp


function LLVMDebugMetadataVersion:dword;cdecl;external;
{*
 * The version of debug metadata that's present in the provided \c Module.
  }
function LLVMGetModuleDebugMetadataVersion(Module:TLLVMModuleRef):dword;cdecl;external;
{*
 * Strip debug info in the module if it exists.
 * To do this, we remove all calls to the debugger intrinsics and any named
 * metadata for debugging. We also remove debug locations for instructions.
 * Return true if module is modified.
  }
function LLVMStripModuleDebugInfo(Module:TLLVMModuleRef):TLLVMBool;cdecl;external;
{*
 * Construct a builder for a module, and do not allow for unresolved nodes
 * attached to the module.
  }
function LLVMCreateDIBuilderDisallowUnresolved(M:TLLVMModuleRef):TLLVMDIBuilderRef;cdecl;external;
{*
 * Construct a builder for a module and collect unresolved nodes attached
 * to the module in order to resolve cycles during a call to
 * \c LLVMDIBuilderFinalize.
  }
function LLVMCreateDIBuilder(M:TLLVMModuleRef):TLLVMDIBuilderRef;cdecl;external;
{*
 * Deallocates the \c DIBuilder and everything it owns.
 * @note You must call \c LLVMDIBuilderFinalize before this
  }
procedure LLVMDisposeDIBuilder(Builder:TLLVMDIBuilderRef);cdecl;external;
{*
 * Construct any deferred debug info descriptors.
  }
procedure LLVMDIBuilderFinalize(Builder:TLLVMDIBuilderRef);cdecl;external;
{*
 * Finalize a specific subprogram.
 * No new variables may be added to this subprogram afterwards.
  }
procedure LLVMDIBuilderFinalizeSubprogram(Builder:TLLVMDIBuilderRef; Subprogram:TLLVMMetadataRef);cdecl;external;
{*
 * A CompileUnit provides an anchor for all debugging
 * information generated during this instance of compilation.
 * \param Lang          Source programming language, eg.
 *                      \c LLVMDWARFSourceLanguageC99
 * \param FileRef       File info.
 * \param Producer      Identify the producer of debugging information
 *                      and code.  Usually this is a compiler
 *                      version string.
 * \param ProducerLen   The length of the C string passed to \c Producer.
 * \param isOptimized   A boolean flag which indicates whether optimization
 *                      is enabled or not.
 * \param Flags         This string lists command line options. This
 *                      string is directly embedded in debug info
 *                      output which may be used by a tool
 *                      analyzing generated debugging information.
 * \param FlagsLen      The length of the C string passed to \c Flags.
 * \param RuntimeVer    This indicates runtime version for languages like
 *                      Objective-C.
 * \param SplitName     The name of the file that we'll split debug info
 *                      out into.
 * \param SplitNameLen  The length of the C string passed to \c SplitName.
 * \param Kind          The kind of debug information to generate.
 * \param DWOId         The DWOId if this is a split skeleton compile unit.
 * \param SplitDebugInlining    Whether to emit inline debug info.
 * \param DebugInfoForProfiling Whether to emit extra debug info for
 *                              profile collection.
 * \param SysRoot         The Clang system root (value of -isysroot).
 * \param SysRootLen      The length of the C string passed to \c SysRoot.
 * \param SDK           The SDK. On Darwin, the last component of the sysroot.
 * \param SDKLen        The length of the C string passed to \c SDK.
  }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function LLVMDIBuilderCreateCompileUnit(Builder:TLLVMDIBuilderRef; Lang:TLLVMDWARFSourceLanguage; FileRef:TLLVMMetadataRef; Producer:Pchar; ProducerLen:Tsize_t; 
           isOptimized:TLLVMBool; Flags:Pchar; FlagsLen:Tsize_t; RuntimeVer:dword; SplitName:Pchar; 
           SplitNameLen:Tsize_t; Kind:TLLVMDWARFEmissionKind; DWOId:dword; SplitDebugInlining:TLLVMBool; DebugInfoForProfiling:TLLVMBool; 
           SysRoot:Pchar; SysRootLen:Tsize_t; SDK:Pchar; SDKLen:Tsize_t):TLLVMMetadataRef;cdecl;external;
{*
 * Create a file descriptor to hold debugging information for a file.
 * \param Builder      The \c DIBuilder.
 * \param Filename     File name.
 * \param FilenameLen  The length of the C string passed to \c Filename.
 * \param Directory    Directory.
 * \param DirectoryLen The length of the C string passed to \c Directory.
  }
(* Const before type ignored *)
(* Const before type ignored *)
function LLVMDIBuilderCreateFile(Builder:TLLVMDIBuilderRef; Filename:Pchar; FilenameLen:Tsize_t; Directory:Pchar; DirectoryLen:Tsize_t):TLLVMMetadataRef;cdecl;external;
{*
 * Creates a new descriptor for a module with the specified parent scope.
 * \param Builder         The \c DIBuilder.
 * \param ParentScope     The parent scope containing this module declaration.
 * \param Name            Module name.
 * \param NameLen         The length of the C string passed to \c Name.
 * \param ConfigMacros    A space-separated shell-quoted list of -D macro
                          definitions as they would appear on a command line.
 * \param ConfigMacrosLen The length of the C string passed to \c ConfigMacros.
 * \param IncludePath     The path to the module map file.
 * \param IncludePathLen  The length of the C string passed to \c IncludePath.
 * \param APINotesFile    The path to an API notes file for the module.
 * \param APINotesFileLen The length of the C string passed to \c APINotestFile.
  }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function LLVMDIBuilderCreateModule(Builder:TLLVMDIBuilderRef; ParentScope:TLLVMMetadataRef; Name:Pchar; NameLen:Tsize_t; ConfigMacros:Pchar; 
           ConfigMacrosLen:Tsize_t; IncludePath:Pchar; IncludePathLen:Tsize_t; APINotesFile:Pchar; APINotesFileLen:Tsize_t):TLLVMMetadataRef;cdecl;external;
{*
 * Creates a new descriptor for a namespace with the specified parent scope.
 * \param Builder          The \c DIBuilder.
 * \param ParentScope      The parent scope containing this module declaration.
 * \param Name             NameSpace name.
 * \param NameLen          The length of the C string passed to \c Name.
 * \param ExportSymbols    Whether or not the namespace exports symbols, e.g.
 *                         this is true of C++ inline namespaces.
  }
(* Const before type ignored *)
function LLVMDIBuilderCreateNameSpace(Builder:TLLVMDIBuilderRef; ParentScope:TLLVMMetadataRef; Name:Pchar; NameLen:Tsize_t; ExportSymbols:TLLVMBool):TLLVMMetadataRef;cdecl;external;
{*
 * Create a new descriptor for the specified subprogram.
 * \param Builder         The \c DIBuilder.
 * \param Scope           Function scope.
 * \param Name            Function name.
 * \param NameLen         Length of enumeration name.
 * \param LinkageName     Mangled function name.
 * \param LinkageNameLen  Length of linkage name.
 * \param File            File where this variable is defined.
 * \param LineNo          Line number.
 * \param Ty              Function type.
 * \param IsLocalToUnit   True if this function is not externally visible.
 * \param IsDefinition    True if this is a function definition.
 * \param ScopeLine       Set to the beginning of the scope this starts
 * \param Flags           E.g.: \c LLVMDIFlagLValueReference. These flags are
 *                        used to emit dwarf attributes.
 * \param IsOptimized     True if optimization is ON.
  }
(* Const before type ignored *)
(* Const before type ignored *)
function LLVMDIBuilderCreateFunction(Builder:TLLVMDIBuilderRef; Scope:TLLVMMetadataRef; Name:Pchar; NameLen:Tsize_t; LinkageName:Pchar; 
           LinkageNameLen:Tsize_t; File:TLLVMMetadataRef; LineNo:dword; Ty:TLLVMMetadataRef; IsLocalToUnit:TLLVMBool; 
           IsDefinition:TLLVMBool; ScopeLine:dword; Flags:TLLVMDIFlags; IsOptimized:TLLVMBool):TLLVMMetadataRef;cdecl;external;
{*
 * Create a descriptor for a lexical block with the specified parent context.
 * \param Builder      The \c DIBuilder.
 * \param Scope        Parent lexical block.
 * \param File         Source file.
 * \param Line         The line in the source file.
 * \param Column       The column in the source file.
  }
function LLVMDIBuilderCreateLexicalBlock(Builder:TLLVMDIBuilderRef; Scope:TLLVMMetadataRef; File:TLLVMMetadataRef; Line:dword; Column:dword):TLLVMMetadataRef;cdecl;external;
{*
 * Create a descriptor for a lexical block with a new file attached.
 * \param Builder        The \c DIBuilder.
 * \param Scope          Lexical block.
 * \param File           Source file.
 * \param Discriminator  DWARF path discriminator value.
  }
function LLVMDIBuilderCreateLexicalBlockFile(Builder:TLLVMDIBuilderRef; Scope:TLLVMMetadataRef; File:TLLVMMetadataRef; Discriminator:dword):TLLVMMetadataRef;cdecl;external;
{*
 * Create a descriptor for an imported namespace. Suitable for e.g. C++
 * using declarations.
 * \param Builder    The \c DIBuilder.
 * \param Scope      The scope this module is imported into
 * \param File       File where the declaration is located.
 * \param Line       Line number of the declaration.
  }
function LLVMDIBuilderCreateImportedModuleFromNamespace(Builder:TLLVMDIBuilderRef; Scope:TLLVMMetadataRef; NS:TLLVMMetadataRef; File:TLLVMMetadataRef; Line:dword):TLLVMMetadataRef;cdecl;external;
{*
 * Create a descriptor for an imported module that aliases another
 * imported entity descriptor.
 * \param Builder        The \c DIBuilder.
 * \param Scope          The scope this module is imported into
 * \param ImportedEntity Previous imported entity to alias.
 * \param File           File where the declaration is located.
 * \param Line           Line number of the declaration.
 * \param Elements       Renamed elements.
 * \param NumElements    Number of renamed elements.
  }
function LLVMDIBuilderCreateImportedModuleFromAlias(Builder:TLLVMDIBuilderRef; Scope:TLLVMMetadataRef; ImportedEntity:TLLVMMetadataRef; File:TLLVMMetadataRef; Line:dword; 
           Elements:PLLVMMetadataRef; NumElements:dword):TLLVMMetadataRef;cdecl;external;
{*
 * Create a descriptor for an imported module.
 * \param Builder        The \c DIBuilder.
 * \param Scope          The scope this module is imported into
 * \param M              The module being imported here
 * \param File           File where the declaration is located.
 * \param Line           Line number of the declaration.
 * \param Elements       Renamed elements.
 * \param NumElements    Number of renamed elements.
  }
function LLVMDIBuilderCreateImportedModuleFromModule(Builder:TLLVMDIBuilderRef; Scope:TLLVMMetadataRef; M:TLLVMMetadataRef; File:TLLVMMetadataRef; Line:dword; 
           Elements:PLLVMMetadataRef; NumElements:dword):TLLVMMetadataRef;cdecl;external;
{*
 * Create a descriptor for an imported function, type, or variable.  Suitable
 * for e.g. FORTRAN-style USE declarations.
 * \param Builder        The DIBuilder.
 * \param Scope          The scope this module is imported into.
 * \param Decl           The declaration (or definition) of a function, type,
                         or variable.
 * \param File           File where the declaration is located.
 * \param Line           Line number of the declaration.
 * \param Name           A name that uniquely identifies this imported
 declaration.
 * \param NameLen        The length of the C string passed to \c Name.
 * \param Elements       Renamed elements.
 * \param NumElements    Number of renamed elements.
  }
(* Const before type ignored *)
function LLVMDIBuilderCreateImportedDeclaration(Builder:TLLVMDIBuilderRef; Scope:TLLVMMetadataRef; Decl:TLLVMMetadataRef; File:TLLVMMetadataRef; Line:dword; 
           Name:Pchar; NameLen:Tsize_t; Elements:PLLVMMetadataRef; NumElements:dword):TLLVMMetadataRef;cdecl;external;
